# ADEX

./: .clang-tidy  .gitignore  Makefile  README  ade.conf.example.in  ade_gresource.xml  advantage.desktop.in  meson.build  meson.options
src/: ade.h  ade_base.c  ade_breaktrap.c  ade_charset.h  ade_config.c  ade_ddt.c  ade_debug.c  ade_disks.c  ade_display.c  ade_dz80.c  ade_extvars.h  ade_fdc.c  ade_file_choose.c  ade_gvars.h  ade_hdc.c  ade_inputs.c  ade_io.c  ade_ioports.c  ade_kbd_codes.h  ade_launch_ade.c  ade_launch_gui.c  ade_mem.c  ade_slot_card.c  ade_trap.c  ade_z80.c  advantage_keyboard_scancodes.h  jfuncs.c  mk_resource_xml  mkinitialconf  mklauncher
src/north_star_tools/: Makefile  compact.c  nsfd2u.c  nsfdls.c  nshdbm.c  nshdls.c  u2nsfd.c  unskew-hd-image.c
subprojects/: .gitignore  ade-disks.wrap  ade-documentation.wrap  north_star_tools.wrap
